--- a/views/booth138voted.ejs
+++ b/views/booth138voted.ejs
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
      <head>
          <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -8,7 +9,6 @@
          <script src="/navbar.js" defer></script>
          <script src="/savedata.js" defer></script>
          <script src="/topbtn.js" defer></script>
-         <link rel="stylesheet" href="/footer.css">
          <link rel="stylesheet" href="/nav.css">
          <link rel="preconnect" href="https://fonts.googleapis.com">
          <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
@@ -20,75 +20,51 @@
          <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&display=swap">
          <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
          <script src="https://code.jquery.com/jquery-1.8.2.min.js"></script>
-         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-         <link rel="manifest" href="/site.webmanifest">
+        
         </head>
      <body>
        
-        <button onclick="topFunction()" id="myBtn" class="topbtn" title="Go to top"><i class="fa-solid fa-arrow-up"></i></button>
-         <section class="header">
-            
-          
+        <div id="sidemenu2">
 
-            <nav >
-                
-              
-                <a href="/" class="logo" style="font-size: 20px;
-                font-family: 'Montserrat', sans-serif;
-                color: white;text-decoration: none;font-weight: 800;">CPIM KOSHORMOOLA</a>
-             
-                
-                <i class="fa-solid fa-bars  fas" onclick="openmenu()"></i>
+            <p>Support</p>
+            <a href="tel:+919447140767"><i class="fa-solid fa-headset"></i> Contact Us  </a>
+            <a href="mailto:gokuljithk@gmail.com"><i class="fa-solid fa-circle-info"></i> About Us </a>
+          </div>
+        
+        <div id="myBtn2">
     
-
-               <div class="navbtn">
-               <a  class="hero-btn2 heronew"> Home </a>
-               <a class="hero-btn2 heronew"> Product </a>
-               <a class="hero-btn2 heronew"> About </a>
-               <a class="hero-btn2 heronew"> Contact </a>
-               <a class="hero-btn2 heronew"> Subscription </a>
-               <a href="/logout" class="hero-btn2"  ><i class="fa-solid fa-user"></i>Logout</a>
-               </div>
-               
+            <a  href="/" class="topbtn3" title="more"><i class="fa-solid fa-house"></i>  <p>Home</p></a>  
+            <a  href="/profile" class="topbtn3" title="more"><i class="fa-solid fa-user"></i><p>Profile</p></a>
+            <a  href="/voterlist" class="topbtn3" title="more"><i class="fa-solid fa-user-pen"></i><p>Edit</p></a>
+            <a href="/soilhealth"  class="topbtn3" title="more"><i class="fa-solid fa-snowflake"></i></i><p>List</p></a>
+    
+        </div>
+        <section class="header">
+                
+              <nav >
+                
+                <i class="fa-solid fa-bars" onclick="openmenu()"></i>
                 <ul id="sidemenu">
-                    <li><a href="#contact" onclick="closemenu()" style="font-size: 13px;"><i class="fa-solid fa-xmark"></i></a></li>
-                    <hr>
-                    <li><a href="/">Home</a></li>
-                  <hr>
-                      <li><a href="/votercreation">Voter Creation</a></li>
-                  <hr>
-                      <li><a href="/booth138">Booth 138</a></li>
-                  <hr>
-                      <li><a href="/soilhealth">Voters List</a></li>
-                  <hr>
-                        <p>
-                          Thank you for choosing my platform. I value your trust and support. Please free to Contact me anytime
-                        </p>
-                       
-                        <li><a href="login" class="login">Logout</a></li>
-                        <li><a href="/" class="login join">Subscription</a></li>
-                   
-                        
+                    
+                    <li ><a style="background: whitesmoke;border-radius: 5px;padding: 5px;"  onclick="closemenu()" style="font-size: 13px;"><i class="fa-solid fa-xmark"></i></a></li>
+    
+                        <p>General</p>
+                        <li><a href="/profile"><i class="fa-solid fa-user"></i> Profile</a></li>
+                        <li><a href="/"><i class="fa-solid fa-bell"></i> Notification</a></li>
+                        <li><a href="/soilhealth"><i class="fa-solid fa-snowflake"></i> Voter list </a></li>
+                        <li><a href="/138squad1"><i class="fa-solid fa-gear"></i> Squad 1 </a></li>
+                        <li><a href="/138squad2"><i class="fa-solid fa-compass"></i> Squad 2</a></li>
+                        <li><a href="/138squad3"><i class="fa-solid fa-earth-americas"></i> Squad 3 </a></li>
+                        <li><a href="/138squad4"><i class="fa-solid fa-gauge"></i> Squad 4 </a></li>
+                        <li><a href="/138squad5"><i class="fa-solid fa-diamond"></i> Squad 5</a></li>
+                        <li><a href="/logout" class="login"><i class="fa-solid fa-right-from-bracket"></i>LogOut</a></li>
+                            
+                    <p style="text-align: center;">Terms of Use | Privacy Policy</p>
+                                
                 </ul>
                 
-
-                
             </nav>
-            <div class="icons-header">
-                <a href="/"><i class="fa-solid fa-house"></i></a>
-                <a href="/votercreation"><i class="fa-solid fa-user-plus"></i></a>
-                <a href="/booth138"><i class="fa-brands fa-slack"></i></a>
-                <a href="/voterlist"><i class="fa-solid fa-address-book"></i></a>
-                <a href="/squadlist"><i class="fa-solid fa-people-group"></i></a>
-                <a href="/soilhealth"><i class="fa-solid fa-book"></i></a>
-                
-                
-            </div>
-                
-           
-         </section>
+    </section>
          <section class="overview" >
             <!--
             <div class="popup-onload">
@@ -134,42 +110,16 @@
                       precision and clarity to your agricultural practices. Enhance your farming experience by preserving the past for 
                       a thriving future.
                 </P>
-                   
-                       
-                    
+                  
                </div>
                  
            </div>
           
        </section>
        <section class="contact">
-       <gmp-map
-       id="marker-click-event-example"
-       center="11.8309  ,   75.4372"
-       zoom="17"
-       map-id="TELINSO_MAP_ID"
-     >
-     <% soildatas.forEach((row,index) => { %>
-       <gmp-advanced-marker
-         position="<%= row.coordinates %>"
-         title="<%= row.housename %> "
-         
-         gmp-clickable
-       ></gmp-advanced-marker>
-       <% })  %>
-       <gmp-advanced-marker
-        id="current-location"
-        position = "0,0"
-        title="current Location"
-
-        gmp-clickable
-       ></gmp-advanced-marker>
-       
-     </gmp-map>
+     
      <button class="overview-btn " ><i class="fa-solid fa-download"></i><a  id="download-link" href="/booth138voted/generate-pdf/totalvote">Download List</a></button>
      
-     
-
         <div>
             <input type="text" id="myInput" onkeyup="searchData()" placeholder="&#128269; Name | House name | Serial No" title="Type in a name">
         </div>
@@ -177,33 +127,33 @@
            
        <div class="contact-row" >
               
-        <% soildatas.forEach((row,index) => { %>
-       
-                <div class="data <%= row.votestatus %>" id="myUL">
-                  <div class="soilname-date">
-                  <p class="name-search"><span><%= row.votername %></span></p>
-                    <p id="serial-search" class="serial-search" ><span><%= row.serialno %></span></p>
-                    </div>
-                    <button class="Showmore" onclick="Showmore('<%= index %>')">Show more <strong>&#x25BD; </strong></button>
-                    <div class="soildata" style="display: none;" id="<%= index %>">
-                    
-                   
-                    <p>House no :<%= row.houseno %> </p>
-                    <p id="house-search" class="house-search">House name : <%= row.housename %> </p>
-                    <p>ID Card No : <%= row.idno %></p>
-                    <p>Booth no : <%= row.boothno %></p>
-                  
-                  
-                    </div>
-                   
-                    
-                   
-                    
-                   
-                 
-                </div>
+        <table>
+            <colgroup>
+                <col style="width: 20%;">
+                <col style="width: 40%;">
+                <col style="width: 40%;">
+            </colgroup>
+            <thead>
+                <tr>
+                    <th>Sl No</th>
+                    <th>Name</th>
+                    <th>House name</th>
                 
-                <% })  %>
+                </tr>
+            </thead>
+            <tbody>
+                <% soildatas.forEach((row,index) => { %>
+           <tr>
+           <td class="serial-search"><%= row.serialno %></td>
+           <td class="name-search"><%= row.votername %></td> 
+           <td class="house-search"><%= row.housename %></td>
+         </tr>
+       
+         <% })  %>
+       
+            </tbody>
+        </table>
+            
       
            </div>
 </section>
@@ -224,10 +174,6 @@
     var months = now.toLocaleDateString(undefined, { month: 'long', });
     var dateNumber = now.getDate();
     
-    
-  
-   
-  
     document.getElementById("dateNumber").innerHTML = dateNumber +" "+ months;
     var date = dateNumber + " " + months;
    document.querySelector("input[name='date']").value = date;
@@ -268,9 +214,7 @@
    });*/
     
   </script>
-  <script
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDn4lHzl_n5h7vQOz1jthHgTw-geOT5LIA&callback=initMap&libraries=marker&v=beta"
-  defer></script>
+  
   <script>
 
 const downloadLink = document.getElementById('download-link');
@@ -279,48 +223,35 @@ const downloadLink = document.getElementById('download-link');
         });
 
 
-      function searchData() {
-          
-        var input = document.getElementById("myInput").value.toLowerCase();
-          var elements = document.getElementsByClassName("serial-search");
-          var elements2 = document.getElementsByClassName("name-search");
-          var elements3 = document.getElementsByClassName("house-search");
-
-         
-          for (var i = 0; i < elements.length; i++) {
-              
-              var textContent = elements[i].textContent.toLowerCase();
-              var textContent2 = elements2[i].textContent.toLowerCase();
-              var textContent3 = elements3[i].textContent.toLowerCase();
-              var searchRegex = new RegExp(`\\b${input}\\b`);
-              var matchFound = searchRegex.test(textContent) ;
-
-
-              if (matchFound || textContent2.includes(input)||textContent3.includes(input)) {
-                  
-                  elements[i].parentElement.parentElement.style.display = "flex";
-              } else {
-                  
-                  elements[i].parentElement.parentElement.style.display = "none";
-              }
-          }
-      }
-    function Showmore(id){
-
-      const showdata = document.getElementById(id);
-      if (showdata.style.display === 'none') {
-        showdata.style.display = 'grid';
-        showdata.previousElementSibling.innerHTML="Show less <strong>&#x25B3;</strong>";
-        
-    } else {
-        showdata.style.display = 'none';
-        showdata.previousElementSibling.innerHTML="Show more <stron>&#x25BD;</strong>";
-    }
-     
       
-       
+          
+        function searchData() {
+            var input = document.getElementById("myInput").value.toLowerCase();
+            var rows = document.querySelectorAll("table tbody tr");
+            
+            rows.forEach(row => {
+                var serialSearch = row.querySelector(".serial-search").textContent.toLowerCase();
+                var nameSearch = row.querySelector(".name-search").textContent.toLowerCase();
+                var houseSearch = row.querySelector(".house-search").textContent.toLowerCase();
+                
+                if (serialSearch.includes(input) || nameSearch.includes(input) || houseSearch.includes(input)) {
+                    row.style.display = "";
+                } else {
+                    row.style.display = "none";
+                }
+            });
+        }
+      function Showmore(index) {
+    const detailsRow = document.getElementById(index);
 
+    if (detailsRow.style.display === 'none' || detailsRow.style.display === '') {
+        detailsRow.style.display = 'block'; 
+    } else {
+        detailsRow.style.display = 'none'; 
     }
+}
+
+
   </script>
 
               
