--- a/views/booth139.ejs
+++ b/views/booth139.ejs
@@ -3,17 +3,23 @@
          <meta name="viewport" content="width=device-width,initial-scale=1.0">
          <title>CPM ELECTION</title>
          
-         <link rel="stylesheet" href="/welcome.css">
-         <link rel="stylesheet" href="/farmer.css">
+         <link rel="stylesheet" href="/overview.css">
+         <link rel="stylesheet" href="/savedata.css">
          <script src="/navbar.js" defer></script>
+         <script src="/savedata.js" defer></script>
+         <script src="/topbtn.js" defer></script>
          <link rel="stylesheet" href="/footer.css">
+         <link rel="stylesheet" href="/nav.css">
          <link rel="preconnect" href="https://fonts.googleapis.com">
+         <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
          <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
          <script src="https://kit.fontawesome.com/01780eab25.js" crossorigin="anonymous"></script>
          <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&display=swap" rel="stylesheet"> 
          <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&display=swap">
          <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+         <script src="https://code.jquery.com/jquery-1.8.2.min.js"></script>
          <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
          <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
          <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -21,218 +27,240 @@
         </head>
      <body>
        
-        
-         <section class="header" >
+        <button onclick="topFunction()" id="myBtn" class="topbtn" title="Go to top"><i class="fa-solid fa-arrow-up"></i></button>
+         <section class="header">
             
-            <div class="container">
+          
 
             <nav >
                 
-                
-               
-                    
               
+                <a href="/" class="logo" style="font-size: 20px;
+                font-family: 'Montserrat', sans-serif;
+                color: white;text-decoration: none;font-weight: 800;">CPIM KOSHORMOOLA</a>
              
                 
-                        <i class="fa-solid fa-bars  fas" onclick="openmenu()"></i>
-            
+                <i class="fa-solid fa-bars  fas" onclick="openmenu()"></i>
     
-                       <div class="navbtn">
-                       <a  class="hero-btn2 heronew"> Home </a>
-                       <a class="hero-btn2 heronew"> Product </a>
-                       <a class="hero-btn2 heronew"> About </a>
-                       <a class="hero-btn2 heronew"> Contact </a>
-                       <a class="hero-btn2 heronew"> Subscription </a>
-                       <a href="/logout" class="hero-btn2"  ><i class="fa-solid fa-user"></i>Logout</a>
-                       </div>
-    
-                
-                
-            
+
+               <div class="navbtn">
+               <a  class="hero-btn2 heronew"> Home </a>
+               <a class="hero-btn2 heronew"> Product </a>
+               <a class="hero-btn2 heronew"> About </a>
+               <a class="hero-btn2 heronew"> Contact </a>
+               <a class="hero-btn2 heronew"> Subscription </a>
+               <a href="/logout" class="hero-btn2"  ><i class="fa-solid fa-user"></i>Logout</a>
+               </div>
+               
                 <ul id="sidemenu">
-                    <li><a  onclick="closemenu()" style="font-size: 13px;"><i class="fa-solid fa-xmark"></i></a></li>
+                    <li><a href="#contact" onclick="closemenu()" style="font-size: 13px;"><i class="fa-solid fa-xmark"></i></a></li>
                     <hr>
-                    <li><a href="#about">Home</a></li>
-                    <hr>
-                        <li><a href="#about">Product</a></li>
-                    <hr>
-                        <li><a href="#about">About</a></li>
-                        <hr>
-                        <li><a href="#contact">Contact</a></li>
-                        <hr>
+                    <li><a href="/">Home</a></li>
+                  <hr>
+                      <li><a href="/votercreation">Voter Creation</a></li>
+                  <hr>
+                      <li><a href="/booth138">Booth 138</a></li>
+                  <hr>
+                      <li><a href="/soilhealth">Voters List</a></li>
+                  <hr>
                         <p>
-                            Thank you for choosing Telinso. We value your trust and support. Please free to Contact us anytime
+                            Thank you for choosing my platform. I value your trust and support. Please free to Contact me anytime
                         </p>
                        
-                        <li><a href="/logout" class="login">Logout</a></li>
-                        <li><a href="" class="login join">Subscription</a></li>
+                        <li><a href="login" class="login">Logout</a></li>
+                        <li><a href="/" class="login join">Subscription</a></li>
                    
-                               
+                        
                 </ul>
                 
+
                 
             </nav>
-            
-             
+            <div class="icons-header">
+                <a href="/"><i class="fa-solid fa-house"></i></a>
+                <a href="/booth138"><i class="fa-brands fa-slack"></i></a>
+                <a href="/voterlist"><i class="fa-solid fa-address-book"></i></a>
+                <a href="/squadlist"><i class="fa-solid fa-people-group"></i></a>
+                <a href="/soilhealth"><i class="fa-solid fa-book"></i></a>
+            </div>
+                
+           
          </section>
-         
-            <section class="overview" >
-             
-                <div class="row">
-                   <div class="overview-col">
-                       <div class="welcome-text">
-                     
-                        <h2>BOOTH 139</h2>
+         <section class="overview" >
+            <!--
+            <div class="popup-onload">
+                <div class="popup-inner">
+                    <div class="popup-content">
+                        <h2 id="timer"></h2>
+
+                        <p> </p>
+                        <span class="alert-description">
+                            <ul class="alert-description">
+
+                              <li> Read this message before using the sensor.</li>
+                              <li> Press the delete icon to clear previous soil data. After that, you can use the sensor.</li>
+                              <li> Do this each time before using the sensor. Click close to go back or wait for the timer.</li>
+                            </ul>
+                        </span>
+                        <a href="/delete-data" class="delete"><i class="fa-solid fa-trash"></i></a>
+                        <a href="" class="close">Close</a>
+                    </div>
+                </div>
+            </div>
+            -->
+            <div class="row">
+               <div class="overview-col">
+                   <h1>VOTERS DETAILS</h1>
+                   <span class="description"> Description </span>
+                   <span class="overview-description">
+                    Manage elections more effectively with the comprehensive voter database feature. Create and register new voters easily using a detailed map with every house marked for reference. Streamline voter registration and information management, enhancing your election strategy with precise, location-based data. 
+                    Empower your election team with efficient tools for voter creation and management.   
+                </span>
+                
+                    
+                   
+                   <P>
+                    Capture the essence of your soil's health journey with Telinso's innovative feature 
+                    data storage with soil detail pictures. Seamlessly record and preserve vital information about your soil, 
+                    accompanied by visual snapshots. Effortlessly track changes, monitor trends, and make informed decisions for
+                     optimal soil health. This powerful tool ensures a comprehensive archive for future reference, empowering users with 
+                     a visual timeline of their soil's evolution. Telinso simplifies the complexity of soil health monitoring, bringing
+                      precision and clarity to your agricultural practices. Enhance your farming experience by preserving the past for 
+                      a thriving future.
+                </P>
+                   
                        
+                    
+               </div>
+                 
+           </div>
+          
+       </section>
+       
+           <section class="contact">
+            <h1>Create Voters</h1>
+            
+            <div class="row">
+               
+            <div id="map" class="view-change" style="height: 400px; width: 90%;margin: 0 auto;"></div>
+                <div class="product-col">
+                    
+                </div>
+               
+                    <div class="contact-col ">
+                  <form id="searchForm" action="https://www.google.com/search" method="GET">
+                            <label for="searchQuery">Enter your search query:</label><br>
+                            <input type="text" id="searchQuery" name="q" required><br>
+                            <input type="submit" value="Search">
+                        </form>
+                    <form action="/upload" method="POST" enctype="multipart/form-data">
+                        
+                        
+                        
+                        <div class="data savedata" style=" padding: 15px;">
+                             
+                            
+                            
+                            <p id="coordinates">Upload Image : </p>
+                            <div style="display: grid; grid-template-columns: auto auto;">
+                            <input type="file" id="img" name="image" >
+                           
+                            
+                            <p id="dateNumber"></p>
+                            <input type="hidden" name="date" value="${dateNumber}">
+                            </div>
+                            <!--
+                            <label for="image-upload" class="file-upload">
+                                Upload image
+                            </label>
+                            
+                            <input type="file" style="display: none;" name="image" style="border: none;" >
+                            -->
+                            
+                        
                         </div>
                         
-                       
+                            <button type="submit" class="btn btn2">Save</button>
+                 
+                        
+                    </form> 
 
-        
-                       
-                      
-                       
-                    <P>
-   
-                        Soil health and crop productivity are crucial factors in agriculture, playing a pivotal role in maintaining a sustainable environment.
-                         The primary cause of soil degradation is the excessive use of fertilizers. Therefore, it is essential to conduct soil testing before 
-                         initiating agriculture. Soil testing holds significance for various reasons: optimizing crop production, improving the nutritional 
-                         balance of the growing media, and saving money and energy by applying only the necessary amount of fertilizer. Our solution is designed 
-                         to assist farmers comprehensively, including monitoring soil conditions and nutrients. Data collected from the monitoring system will be
-                          stored on a cloud server for analysis. The primary objective is to keep track of nutrient levels in the soil.
-                         Having knowledge of their soil before commencing farming will aid farmers in precise cultivation planning.
-                    </P>
-                           
-                        
-                   </div>
-                     
-               </div>
-              
-           </section>
-           
-              
-              <section class="product">
-               <div class="row1">
-                <a href="/voterlist2" class="class1">
-                    <div class="product-col " >
-                        
-                        <i class="fa-solid fa-cloud-arrow-up"></i>
-                            <div>
-                                <h3>Voters List</h3>
-                                
-                            <p>Function to store and retrieve voters.</p>
-                                        
-                            </div>
-                                
-                            </div>
-                         </a>
-                   <a href="/squadlist" class="class2">
-                   <div class="product-col" >
-                       
-                    <i class="fa-solid fa-chart-simple"></i>
-                            <div>
-                            <h3>Squad List</h3>
-                            
-                            <p>a comprehensive soil sample analytics service.</p>
-                            </div>        
-                        
-                               
-                           </div>
-                        </a>  
-                       
+                 
+                </div>
                 
                   
-               </div>
-              
-               </section>
-              
-         
-        
+           </div>
+           
+           
+           
+       </section>
 
        <section class="footer">
           
-       
-            <div class="row">
-                <div class="footer-col1" >
-                    <p>Soil Analysis</p>
-                    <p>Visualization</p>
-                    <p>Farmer Assist</p>
-                    <p>Weather Forecast</p>
-                   
-                  
-                        </div>
-                        <hr>
-                <div class="footer-col1"  >
-                      <p>Data Analytics</p>
-                      <p>Cloud computing</p>
-                      <p>Internet of things</p>
-                      <p>Artificial intelligence</p>
-                           
-                                    </div>
-                                    <hr>
-                <div class="footer-col1"  >
-                   <p>Empowernment</p>
-                   <p>Innovation</p>
-                   <p>Possibilities</p>
-                   <p>Collaboration</p>
-                    
-                </div>
-                <hr>
-            
-                <div class="footer-col1"  >
-                    
-                    
-                    <p>Home</p>
-                    <p>Product</p>
-                    <p>About</p>
-                    <p>Contact</p>
-                </div>
-            <hr>
-    </div>
-            <div class="footer-col" style="text-align: center;" >     
-                   <p>
-                    Telinso is an IoT-based solution that provides soil health data to farmers and agriculture enthusiasts. It consists of a comprehensive suite of software and hardware that can measure and monitor soil conditions and nutrients, such as pH, moisture, temperature, nitrogen, phosphorus, potassium, and more. By using Telinso, you can access real-time and accurate information about your soil health, and get customized recommendations on how to improve your crop productivity and soil quality. Telinso is a user-friendly, cost-effective, and scalable system that can help you optimize your farming practices and achieve sustainable agriculture. Learn more about Telinso and how it can benefit you. Contact us today
-                </p>
-            </div>
-            <div class="footer-col" style="text-align: center;" >     
-                <p>
-                    <i class="fa-brands fa-instagram"></i><i class="fa-brands fa-linkedin"></i><i class="fa-brands fa-square-facebook"></i><i class="fa-brands fa-square-x-twitter"></i>
-                   <br>
-                   <p > 	&copy; TEAM TELINSO</p>
-                </p>
-            </div>
-   </section>
+        <div class="footer-col" style="text-align: center;" >     
+         
+               <p > 	&copy; Gokuljith k</p>
+           
+        </div>
+      </section>
+   
    <script>
     // Get current date and time
     var now = new Date();
   
     // Extract date, time, and day
     var months = now.toLocaleDateString(undefined, { month: 'long', });
-    var time = now.toLocaleTimeString();
     var dateNumber = now.getDate();
-    var day = now.toLocaleDateString(undefined, { weekday: 'long' });
-  
-    // Get hour to determine the greeting
-    var hour = now.getHours();
-    var greeting = "";
-  
-    if (hour < 12) {
-      greeting = "Good Morning";
-    } else if (hour < 18) {
-      greeting = "Good Afternoon";
-    } else {
-      greeting = "Good Evening";
-    }
+    
+    
   
    
-    document.getElementById("greeting").innerHTML = greeting;
-    document.getElementById("dateNumber").innerHTML = dateNumber +" "+ months;
-    document.getElementById("day").innerHTML = "How's Your "+day+" Going";
-  </script>
   
-                         
-                       
-                
+    document.getElementById("dateNumber").innerHTML = dateNumber +" "+ months;
+    var date = dateNumber + " " + months;
+   document.querySelector("input[name='date']").value = date;
+/*
+   remtime = 90;
+   const timer = document.getElementById('timer');
+   const interval = setInterval(() =>{
+    timer.textContent = `${remtime}`;
+
+    if(remtime<=0){
+        clearInterval(interval);
+        timer.textContent="There you go!";
+    }
+    remtime--;
+   },1000);
+
+   $(function(){
+    
+    const overlay=$('<div id="overlay"></div>');
+    overlay.show();
+    overlay.appendTo(document.body);
+    $('.popup-onload').show();
+    $('.close').click(function(){
+        $('.popup-onload').hide();
+        overlay.appendTo(document.body).remove();
+        return false;
+    });
+    
+   
+    $('.x').click(function(){
+        $('.popup').hide();
+        overlay.appendTo(document.body).remove();
+        return false;
+
+    });
+    
+
+   });*/
+    
+  </script>
+  <script
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDn4lHzl_n5h7vQOz1jthHgTw-geOT5LIA&callback=initMap&v=weekly"
+  defer
+></script>
+
               
          </body>
 </html>
