--- a/views/savedata.ejs
+++ b/views/savedata.ejs
@@ -8,7 +8,6 @@
          <script src="/navbar.js" defer></script>
          <script src="/savedata.js" defer></script>
          <script src="/topbtn.js" defer></script>
-         <link rel="stylesheet" href="/footer.css">
          <link rel="stylesheet" href="/nav.css">
          <link rel="preconnect" href="https://fonts.googleapis.com">
          <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
@@ -20,72 +19,51 @@
          <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&display=swap">
          <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
          <script src="https://code.jquery.com/jquery-1.8.2.min.js"></script>
-         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-         <link rel="manifest" href="/site.webmanifest">
+        
         </head>
      <body>
        
-        <button onclick="topFunction()" id="myBtn" class="topbtn" title="Go to top"><i class="fa-solid fa-arrow-up"></i></button>
-         <section class="header">
-            
-          
+        <div id="sidemenu2">
 
-            <nav >
-                
-              
-                <a href="/" class="logo" style="font-size: 20px;
-                font-family: 'Montserrat', sans-serif;
-                color: white;text-decoration: none;font-weight: 800;">CPIM KOSHORMOOLA</a>
-             
-                
-                <i class="fa-solid fa-bars  fas" onclick="openmenu()"></i>
+            <p>Support</p>
+            <a href="tel:+919447140767"><i class="fa-solid fa-headset"></i> Contact Us  </a>
+            <a href="mailto:gokuljithk@gmail.com"><i class="fa-solid fa-circle-info"></i> About Us </a>
+          </div>
+        
+        <div id="myBtn2">
     
-
-               <div class="navbtn">
-               <a  class="hero-btn2 heronew"> Home </a>
-               <a class="hero-btn2 heronew"> Product </a>
-               <a class="hero-btn2 heronew"> About </a>
-               <a class="hero-btn2 heronew"> Contact </a>
-               <a class="hero-btn2 heronew"> Subscription </a>
-               <a href="/logout" class="hero-btn2"  ><i class="fa-solid fa-user"></i>Logout</a>
-               </div>
-               
+            <a  href="/" class="topbtn3" title="more"><i class="fa-solid fa-house"></i>  <p>Home</p></a>  
+            <a  href="/profile" class="topbtn3" title="more"><i class="fa-solid fa-user"></i><p>Profile</p></a>
+            <a  href="/voterlist" class="topbtn3" title="more"><i class="fa-solid fa-user-pen"></i><p>Edit</p></a>
+            <a href="/soilhealth"  class="topbtn3" title="more"><i class="fa-solid fa-snowflake"></i></i><p>List</p></a>
+    
+        </div>
+        <section class="header">
+                
+              <nav >
+                
+                <i class="fa-solid fa-bars" onclick="openmenu()"></i>
                 <ul id="sidemenu">
-                    <li><a href="#contact" onclick="closemenu()" style="font-size: 13px;"><i class="fa-solid fa-xmark"></i></a></li>
-                    <hr>
-                    <li><a href="/">Home</a></li>
-                  <hr>
-                      <li><a href="/votercreation">Voter Creation</a></li>
-                  <hr>
-                      <li><a href="/booth138">Booth 138</a></li>
-                  <hr>
-                      <li><a href="/soilhealth">Voters List</a></li>
-                  <hr>
-                        <p>
-                            Thank you for choosing my platform. I value your trust and support. Please free to Contact me anytime
-                        </p>
-                       
-                        <li><a href="login" class="login">Logout</a></li>
-                        <li><a href="/" class="login join">Subscription</a></li>
-                   
-                        
+                    
+                    <li ><a style="background: whitesmoke;border-radius: 5px;padding: 5px;"  onclick="closemenu()" style="font-size: 13px;"><i class="fa-solid fa-xmark"></i></a></li>
+    
+                        <p>General</p>
+                        <li><a href="/profile"><i class="fa-solid fa-user"></i> Profile</a></li>
+                        <li><a href="/"><i class="fa-solid fa-bell"></i> Notification</a></li>
+                        <li><a href="/soilhealth"><i class="fa-solid fa-snowflake"></i> Voter list </a></li>
+                        <li><a href="/138squad1"><i class="fa-solid fa-gear"></i> Squad 1 </a></li>
+                        <li><a href="/138squad2"><i class="fa-solid fa-compass"></i> Squad 2</a></li>
+                        <li><a href="/138squad3"><i class="fa-solid fa-earth-americas"></i> Squad 3 </a></li>
+                        <li><a href="/138squad4"><i class="fa-solid fa-gauge"></i> Squad 4 </a></li>
+                        <li><a href="/138squad5"><i class="fa-solid fa-diamond"></i> Squad 5</a></li>
+                        <li><a href="/logout" class="login"><i class="fa-solid fa-right-from-bracket"></i>LogOut</a></li>
+                            
+                    <p style="text-align: center;">Terms of Use | Privacy Policy</p>
+                                
                 </ul>
                 
-
-                
             </nav>
-            <div class="icons-header">
-                <a href="/"><i class="fa-solid fa-house"></i></a>
-                <a href="/booth138"><i class="fa-brands fa-slack"></i></a>
-                <a href="/voterlist"><i class="fa-solid fa-address-book"></i></a>
-                <a href="/squadlist"><i class="fa-solid fa-people-group"></i></a>
-                <a href="/soilhealth"><i class="fa-solid fa-book"></i></a>
-            </div>
-                
-           
-         </section>
+    </section>
          <section class="overview" >
             <!--
             <div class="popup-onload">
