--- a/views/voterlist.ejs
+++ b/views/voterlist.ejs
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
      <head>
          <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -8,7 +9,6 @@
          <link rel="stylesheet" href="/nav.css">
          <script src="/navbar.js" defer></script>
          <script src="/topbtn.js" defer></script>
-        <link rel="stylesheet" href="/footer.css">
         <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
         <script src="/soilhealth.js" defer></script>
          <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,14 +19,10 @@
          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
          <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
          <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
-         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-         <link rel="manifest" href="/site.webmanifest">
+       
          <style>
            .header{
         background-image:linear-gradient(to bottom, rgba(14, 13, 13, 0.838) 15%,transparent 90%),url(kodiyeri.jpeg);
-        height: 350px;
         background-position: center;
         background-size: cover;
         
@@ -34,127 +30,79 @@
          </style>
         </head>
      <body>
-      <a  id="myBtn" href="/voterlist" class="topbtn" title="Go to top"><i class="fa-solid fa-arrow-up"></i></a> 
-     
-        
-         <section class="header">
-            
-            <div class="container">
+      
+      <div id="sidemenu2">
 
-            <nav >
-             
-              <a href="/" class="logo" style="font-size: 20px;
-                font-family: 'Montserrat', sans-serif;
-                color: white;text-decoration: none;font-weight: 800;">CPIM KOSHORMOOLA</a>
-             
-                
-              <i class="fa-solid fa-bars  fas" onclick="openmenu()"></i>
-  
+        <p>Support</p>
+        <a href="tel:+919447140767"><i class="fa-solid fa-headset"></i> Contact Us  </a>
+        <a href="mailto:gokuljithk@gmail.com"><i class="fa-solid fa-circle-info"></i> About Us </a>
+      </div>
+    
+    <div id="myBtn2">
 
-             <div class="navbtn">
-             <a  class="hero-btn2 heronew"> Home </a>
-             <a class="hero-btn2 heronew"> Product </a>
-             <a class="hero-btn2 heronew"> About </a>
-             <a class="hero-btn2 heronew"> Contact </a>
-             <a class="hero-btn2 heronew"> Subscription </a>
-             <a href="/logout" class="hero-btn2"  ><i class="fa-solid fa-user"></i>Logout</a>
-             </div>
-                
+        <a  href="/" class="topbtn3" title="more"><i class="fa-solid fa-house"></i>  <p>Home</p></a>  
+        <a  href="/profile" class="topbtn3" title="more"><i class="fa-solid fa-user"></i><p>Profile</p></a>
+        <a  href="/voterlist" class="topbtn3" title="more"><i class="fa-solid fa-user-pen"></i><p>Edit</p></a>
+        <a href="/soilhealth"  class="topbtn3" title="more"><i class="fa-solid fa-snowflake"></i></i><p>List</p></a>
+
+    </div>
+    <section class="header">
             
-                <ul id="sidemenu">
-                    <li><a href="#contact" onclick="closemenu()" style="font-size: 13px;"><i class="fa-solid fa-xmark"></i></a></li>
-                    <hr>
-                    <li><a href="/">Home</a></li>
-                  <hr>
-                      <li><a href="/votercreation">Voter Creation</a></li>
-                  <hr>
-                      <li><a href="/booth138">Booth 138</a></li>
-                  <hr>
-                      <li><a href="/soilhealth">Voters List</a></li>
-                  <hr>
-                        <p>
-                            Thank you for choosing my platform. I value your trust and support. Please free to Contact me anytime
-                        </p>
-                       
-                        <li><a href="login" class="login">Log out</a></li>
-                        <li><a href="/" class="login join">Subscription</a></li>
-                   
+          <nav >
+            
+            <i class="fa-solid fa-bars" onclick="openmenu()"></i>
+            <ul id="sidemenu">
+                
+                <li ><a style="background: whitesmoke;border-radius: 5px;padding: 5px;"  onclick="closemenu()" style="font-size: 13px;"><i class="fa-solid fa-xmark"></i></a></li>
+
+                    <p>General</p>
+                    <li><a href="/profile"><i class="fa-solid fa-user"></i> Profile</a></li>
+                    <li><a href="/"><i class="fa-solid fa-bell"></i> Notification</a></li>
+                    <li><a href="/soilhealth"><i class="fa-solid fa-snowflake"></i> Voter list </a></li>
+                    <li><a href="/138squad1"><i class="fa-solid fa-gear"></i> Squad 1 </a></li>
+                    <li><a href="/138squad2"><i class="fa-solid fa-compass"></i> Squad 2</a></li>
+                    <li><a href="/138squad3"><i class="fa-solid fa-earth-americas"></i> Squad 3 </a></li>
+                    <li><a href="/138squad4"><i class="fa-solid fa-gauge"></i> Squad 4 </a></li>
+                    <li><a href="/138squad5"><i class="fa-solid fa-diamond"></i> Squad 5</a></li>
+                    <li><a href="/logout" class="login"><i class="fa-solid fa-right-from-bracket"></i>LogOut</a></li>
                         
-                </ul>
-                
-                
-            </nav>
-            <div class="icons-header">
-              <a href="/"><i class="fa-solid fa-house"></i></a>
-              <a href="/votercreation"><i class="fa-solid fa-user-plus"></i></a>
-              <a href="/booth138"><i class="fa-brands fa-slack"></i></a>
-              <a href="/voterlist"><i class="fa-solid fa-address-book"></i></a>
-              <a href="/squadlist"><i class="fa-solid fa-people-group"></i></a>
-              <a href="/soilhealth"><i class="fa-solid fa-book"></i></a>
-          </div>
-             </div>
-         </section>
+                <p style="text-align: center;">Terms of Use | Privacy Policy</p>
+                            
+            </ul>
+            
+        </nav>
+</section>
          <section class="overview" >
              
             <div class="row">
                <div class="overview-col">
-                   <h1>BOOTH 138 LIST</h1>
+                   <h1>VOTER EDIT</h1>
                    <span class="description"> Description </span>
                    <span class="overview-description">
                     Manage elections more effectively with the comprehensive voter database feature for booth 138. Explore a detailed map with every house marked for easy navigation and identification. Access and download complete voter information for each house,
                      streamlining your election planning and execution. Enhance your election strategy with precise, location-based data for booth 138.</span>
                    <div class="votestat">
-                    <a  class="total-vote">Total Vote <br><h2 > <%= count %></h2></a>
-                    <a href="/booth138voted" class="vote-complete">Voted <br><h2 > <%= count1 %></h2></a>
-                    <a href="/booth138notvoted" class="vote-incomplete">Not Voted <br><h2 > <%= count2 %></h2></a>
-                    <a href="/booth138avail"  class="vote-availability">Unavailable <br><h2 > <%= count3 %></h2></a>
-                    <a href="/booth138open" class="vote-open">Open Vote <br><h2 > <%= count5 %></h2></a>
-                    <a href="/booth138postal" class="vote-postal">Postal Vote <br><h2 > <%= count5 %></h2></a>
-                    <a href="/booth138fav" class="vote-favoured">Favoured <br><h2 > <%= count6 %></h2></a>
-                    <a href="booth138donation" class="vote-fund">Fund <br><h2 > <%= count7 %>&#8377;</h2></a>
-                    <a href="booth138expenses" class="vote-expenses">Expenses <br><h2 > <%= count8 %>&#8377;</h2></a>
+                    <a class="total-vote">Total Vote <br><h2 > <%= count %></h2></a>
+                    <a class="vote-complete">Voted <br><h2 > <%= count1 %></h2></a>
+                    <a class="vote-incomplete">Not Voted <br><h2 > <%= count2 %></h2></a>
+                    <a class="vote-availability">Unavailable <br><h2 > <%= count3 %></h2></a>
+                    <a class="vote-open">Open Vote <br><h2 > <%= count5 %></h2></a>
+                    <a class="vote-postal">Postal Vote <br><h2 > <%= count5 %></h2></a>
+                    <a class="vote-favoured">Favoured <br><h2 > <%= count6 %></h2></a>
+                      <a class="vote-fund">Fund <br><h2 > <%= count7 %> &#8377;</h2></a>
+                      <a class="vote-expenses">Expenses <br><h2 > <%= count8 %> &#8377;</h2></a>
                    </div>
                </div>
                  
            </div>
            
-           
-          
-            
-        </div>
-        
-
-         
-         
-         
+        </div> 
        </section>
        
          
            <section class="contact">
           
-                   <gmp-map
-           id="marker-click-event-example"
-           center="11.8309  ,   75.4372"
-           zoom="17"
-           map-id="TELINSO_MAP_ID"
-         >
-         <% soildatas.forEach((row,index) => { %>
-           <gmp-advanced-marker
-             position="<%= row.coordinates %>"
-             title="<%= row.housename %> "
-             
-             gmp-clickable
-           ></gmp-advanced-marker>
-           <% })  %>
-           <gmp-advanced-marker
-            id="current-location"
-            position = "0,0"
-            title="current Location"
-
-            gmp-clickable
-           ></gmp-advanced-marker>
-           
-         </gmp-map>
+               
          <button class="overview-btn "><i class="fa-solid fa-download"></i><a  id="download-link" href="/booth138/generate-pdf/totalvote">Download List</a></button>
          
          
@@ -211,9 +159,7 @@
                 <p > 	&copy; Gokuljith k</p>
            </div>
       </section>
-   <script
-   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDn4lHzl_n5h7vQOz1jthHgTw-geOT5LIA&callback=initMap&libraries=marker&v=beta"
-   defer></script>
+   
     <script>
 
      const downloadLink = document.getElementById('download-link');
@@ -265,51 +211,7 @@
 
     }
      
-      function showCurrentLocation() {
-    if (navigator.geolocation) {
-      navigator.geolocation.getCurrentPosition(
-        (position) => {
-          const lat = position.coords.latitude;
-          const lng = position.coords.longitude;
-
-          const marker = document.createElement("gmp-advanced-marker");
-          marker.setAttribute("position", `${lat},${lng}`);
-          marker.setAttribute("title", "Current Location");
-          document.getElementById("marker-click-event-example").appendChild(marker);
-        },
-        () => {
-          alert("Error: The Geolocation service failed.");
-        }
-      );
-    } else {
-      alert("Error: Your browser doesn't support geolocation.");
-    }
-  }
-  var xValues = ["voted","Not voted"];
-  
-    var yValues = [`<%= count1 %>`, `<%= count2 %>`];
-    var barColors = ["green", "red",];
-    
-   
-    new Chart("doughChart", {
-    type: "doughnut",
-      data: {
-        labels: xValues,
-        datasets: [{
-          backgroundColor: barColors,
-          data: yValues
-        }]
-      },
-      options: {
-        legend: {display: false},
-        title: {
-          display: true,
-          text: "Visualization of Soil Sample - Doughnut Graph"
-        }
-      }
-    });
-  
-
+     
     </script>
 
          </body>
